k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad1-app-repo
  labels:
    app: squad1-app
    app.kubernetes.io/instance: apac-bc-squad-1
    app.kubernetes.io/name: squad1-app
    app.openshift.io/runtime: js
  name: squad1-deployment 
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: apac-bc-squad-1
      app.kubernetes.io/name: squad1-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: apac-bc-squad-1
        app.kubernetes.io/name: squad1-app
    spec:
      serviceAccountName: build-bot
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/poornimata/squad1-app
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: squad1-app
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
